<resources>
    <string name="app_name">역전로또</string>
    <string name="random_str">랜덤으로 번호 생성</string>
    <string name="random_str2">랜덤으로 로또번호를 생성합니다.</string>
    <string name="constellation_str">별자리로 번호 생성</string>
    <string name="constellation_str2">별자리로 로또번호를 생성합니다.</string>
    <string name="user_str">이름으로 번호 생성</string>
    <string name="user_str2">이름으로 로또번호를 생성합니다.</string>
    <string name="title_activity_constellation">별자리 생성</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_name">이름으로 생성</string>
    <string name="result_activity_name">번호 생성</string>
</resources>